# JuaPesa

./: .gitignore  README.md  index.html  package-lock.json  render.yaml  tailwind.config.ts
.github/workflows/: ci.yml
backend/: .env.example  README.md  api_demo.py  environment.yml  pyproject.toml
backend/app/: main.py
backend/app/ai/: groq_client.py
backend/app/api/: routes.py
backend/app/core/: cache.py  config.py  db.py  logging.py
backend/app/integrations/: cctp.py  cctp_live.py  daraja.py  daraja_live.py  hedera.py  hedera_live.py  integration_factory.py
backend/app/models/: db_models.py  schemas.py
backend/app/services/: auth.py  forecast.py  liquidity.py  wallet.py
backend/app/utils/: ids.py
backend/tests/: conftest.py  test_ai.py  test_api.py  test_config.py  test_cors_ready.py  test_coverage_branches.py  test_db.py  test_integration_factory_live.py  test_main.py  test_metrics_and_cache.py  test_new_endpoints_and_integrations.py  test_utils.py
contract/: .env.example  README.md  hardhat.config.js  package-lock.json  package.json
contract/contracts/: LiquidityPool.sol
contract/scripts/: check-env.js  deploy.js
contract/test/: LiquidityPool.test.js
doc/: JuaPesaPRD.md  demo_day_QA.md
frontend/: .env.example  README.md  package.json
frontend/src/: App.tsx  index.css
frontend/src/contexts/: AuthContext.tsx
paper/: PAPER_SUMMARY.md  README.md  compile.sh  main.tex  references.bib
paper/figures/: architecture.txt
src/contexts/: AuthContext.tsx  ThemeContext.tsx
src/pages/: Dashboard.tsx  History.tsx  Settings.tsx
(+18 files in other folders)
